H25Aプログラミング解答だけ

--- a/AppliedInformation/午後/H25A.md
+++ b/AppliedInformation/午後/H25A.md
@@ -162,9 +162,32 @@ a.co.jp : ドメイン名 → ホスト名+ドメイン名 = FQDN
 
 ---
 
-## プログラミング
+## プログラミング リストによるメモリ管理
 
-``` txt
+CとかC++やってる人なら解けるのであろう。  
+自分には難しかった。  
+理論は分かるんだけど、実践してみると混乱する。  
+メモリの空き領域が分散する現象を断片化としか連想できなかったのは痛い。  
+午前問題をこなしてフラグメンテーションって単語を見たら即答える条件反射でしか勉強してこなかったからだろう。  
+
+しっかり考え方をまとめたい。  
+
+``` txt 30分オーバー 3/12
+NULL × EDGEの先頭アドレス
+status
+size ← msize - q->size × next
+q->next × q
+q->prev × q->next
+
+'A'
+p->size + r->size + 2*HSIZE × p->size + q->size + r->size + 2*HSIZE
+q->prev × p
+q->size + r->size + HSIZE
+
+断片化 × フラグメンテーション
+600 × 2*HSIZE+600
+アドレスが変わるから 25%
+→メモリブロックの先頭アドレスが変わるから
 ```
 
 ---
